--- a/html/index.html
+++ b/html/index.html
@@ -14,8 +14,8 @@
             border: 0px none;
             padding: 0px;
             background-color: black;
-            image-rendering: pixelated;
-            image-rendering: -moz-crisp-edges;
+            /*image-rendering: pixelated;*/
+            /*image-rendering: -moz-crisp-edges;*/
             outline: none !important;
         }
 
