copied small engine changes made in ludum dare repo

--- a/html/index.html
+++ b/html/index.html
@@ -51,7 +51,7 @@
         }, false)
 
         function makeCanvasFullPage() {
-            Module.setCanvasSize(window.innerWidth, window.innerHeight)
+            Module.setCanvasSize(window.innerWidth, window.innerHeight - 4)
         }
 
         var Module = {
