--- a/html/index.html
+++ b/html/index.html
@@ -101,6 +101,7 @@
                     }
 
                     progressElement.hidden = false
+                    loadingDivElement.hidden = false;
                 } else {
                     progressElement.value = null
                     progressElement.max = null
